# cropland-ui

./: README.md
backend/: .cruft.json  .gitignore  CHANGELOG.md  README.md  pyproject.toml
backend/cropland_api/: __init__.py  cropcode.json  location.geojson
backend/docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
backend/scripts/: clean.sh  lint.sh  test.sh
documentation/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AreaOfInterestForm.tsx  DataTable.tsx  Layout.tsx  Map.tsx  Slider.tsx
frontend/src/hooks/: useCroplandComputation.tsx  useGeoJSON.tsx
