[project]
name = "cropland_api"
version = "0.1.0"
description = "An simple API with geospatial capabilities using FastAPI framework and pixi "
requires-python = ">= 3.9"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
cropland_api = { path = ".", editable = true }

[tool.pixi.tasks]
gdal-activate-and-check = """
cmd /c "call %PIXI_PROJECT_ROOT%\\.pixi\\envs\\default\\etc\\conda\\activate.d\\gdal-activate.bat && echo GDAL_DATA is now: %GDAL_DATA%"
"""
[activation]
scripts = [
    "cmd /c call %PIXI_PROJECT_ROOT%\\.pixi\\envs\\default\\etc\\conda\\activate.d\\gdal-activate.bat && (if defined GDAL_DATA (echo GDAL_DATA is now: %GDAL_DATA%) else (echo Error: GDAL_DATA is not set after activation))"
]

[tool.pixi.dependencies]
fastapi = ">=0.110.0,<0.111"
python = "3.9.*"
uvicorn = ">=0.30.4,<0.31"
gdal = ">=3.9.1,<4"
geographiclib = ">=2.0,<3"
debugpy = ">=1.8.3,<2"
numpy = ">=2.0.1,<3"
python-multipart = ">=0.0.9,<0.0.10"
